# icalpy_plus

./: .gitignore  README.md
core/: config.py  main.py  pyproject.toml  tray.py
core/server/: api.py  app.py  ics_service.py  main.py  schemas.py  service.py
view/kanban/: README.md  index.html  manifest.json  view.js
view/listview/: README.md  index.html  main.js  styles.css
view/timeline/: README.md  index.html
